[gd_scene load_steps=6 format=3 uid="uid://dldv4vq4bfhd1"]

[ext_resource type="Script" path="res://Monsters/witch.gd" id="1_ohw56"]
[ext_resource type="Texture2D" uid="uid://bk2m5qnln6kfn" path="res://icon.svg" id="2_a21qe"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xnm5r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_a21qe")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y0w3c"]
size = Vector2(64, 64)

[sub_resource type="CircleShape2D" id="CircleShape2D_43qyw"]
radius = 9.54563

[node name="Witch" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 6
script = ExtResource("1_ohw56")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.453125, 0.46875)
sprite_frames = SubResource("SpriteFrames_xnm5r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_y0w3c")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(22, 17.3889)
shape = SubResource("CircleShape2D_43qyw")

[node name="SpiderSpawner1" type="Marker2D" parent="."]
position = Vector2(0, 61)

[node name="SpiderSpawner2" type="Marker2D" parent="."]
position = Vector2(-58, 25)

[node name="SpiderSpawner3" type="Marker2D" parent="."]
position = Vector2(56, 28)

[node name="SpiderSpawner4" type="Marker2D" parent="."]
position = Vector2(-41, -40)

[node name="SpiderSpawner5" type="Marker2D" parent="."]
position = Vector2(41, -39)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
